syntax = "proto2";

package ccloudpubapi_v1;

import "compubapi_v1/Metadata.proto";

option java_package = "com.yoti.ccloudpubapi_v1";
option java_outer_classname = "BinOpsProto";

// MoveToBinRequest marks a record for deletion. The item
// will no longer be available for retrieval, but can only
// be completely removed from a trusted device.
message MoveToBinRequest {
    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // RecordId is a unique identifier for a piece of data.
    optional bytes record_id = 3;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 4;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

// RestoreFromBinRequest removes the deletion mark from a record.
message RestoreFromBinRequest {
    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // RecordId is a unique identifier for a piece of data.
    optional bytes record_id = 3;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 4;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

message EmptyBinRequest {
    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 3;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

// RemoveBinnedRequest permanently deletes a record that was already
// moved to the bin.
message RemoveBinnedRequest {
    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // RecordId is a unique identifier for a piece of data.
    optional bytes record_id = 3;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 4;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

